tests/rosetta/transpiler/Scala/24-game.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:5: error: not found: value now
    return now() % 9 + 1
           ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:19: error: not found: value input
    var expr = input()
               ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:22: error: method main has return statement; needs result type
      return
      ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:32: error: method main has return statement; needs result type
          return
          ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:35: error: not found: value int
        while (digits(j) != int(ch) - int("0")) {
                            ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:35: error: not found: value int
        while (digits(j) != int(ch) - int("0")) {
                                      ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:39: error: method main has return statement; needs result type
            return
            ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:42: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: String
        digits = digits.slice(0, j) + digits.slice(j + 1, (digits).size)
                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:43: error: not found: value float
        stack = stack :+ float(int(ch) - int("0"))
                         ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:43: error: not found: value int
        stack = stack :+ float(int(ch) - int("0"))
                               ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:43: error: not found: value int
        stack = stack :+ float(int(ch) - int("0"))
                                         ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:48: error: not found: value break
          break
          ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:53: error: type mismatch;
 found   : Any
 required: String
          stack((stack).size - 2) = a + b
                                        ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:56: error: value - is not a member of Any
            stack((stack).size - 2) = a - b
                                        ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:59: error: value * is not a member of Any
              stack((stack).size - 2) = a * b
                                          ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:62: error: value / is not a member of Any
                stack((stack).size - 2) = a / b
                                            ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:66: error: not found: value break
                break
                ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:76: error: not found: value abs
      if (abs(stack(0) - 24.0) > 0.000001) {
          ^
/workspace/mochi/tests/rosetta/transpiler/Scala/24-game.scala:76: error: value - is not a member of Any
      if (abs(stack(0) - 24.0) > 0.000001) {
                       ^
19 errors found
