tests/rosetta/transpiler/Scala/24-game.scala
// Generated by Mochi v0.10.37 on 2025-07-22 20:23:06 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def randDigit(): Int = {
    return now() % 9 + 1
  }
  
  def main() = {
    var digits: ArrayBuffer[Any] = ArrayBuffer()
    for (i <- 0 until 4) {
      digits = digits :+ randDigit()
    }
    var numstr: String = ""
    for (i <- 0 until 4) {
      numstr = numstr + String.valueOf(digits(i))
    }
    println("Your numbers: " + numstr + "\n")
    println("Enter RPN: ")
    var expr = input()
    if ((expr).size != 7) {
      println("invalid. expression length must be 7. (4 numbers, 3 operators, no spaces)")
      return
    }
    var stack: ArrayBuffer[Any] = ArrayBuffer()
    var i: Int = 0
    var valid: Boolean = true
    while (i < (expr).size) {
      val ch: String = expr.substring(i, i + 1)
      if (ch >= "0" && ch <= "9") {
        if ((digits).size == 0) {
          println("too many numbers.")
          return
        }
        var j: Int = 0
        while (digits(j) != int(ch) - int("0")) {
          j = j + 1
          if (j == (digits).size) {
            println("wrong numbers.")
            return
          }
        }
        digits = digits.slice(0, j) + digits.slice(j + 1, (digits).size)
        stack = stack :+ float(int(ch) - int("0"))
      } else {
        if ((stack).size < 2) {
          println("invalid expression syntax.")
          valid = false
          break
        }
        var b: Any = stack((stack).size - 1)
        var a: Any = stack((stack).size - 2)
        if (ch == "+") {
          stack((stack).size - 2) = a + b
        } else {
          if (ch == "-") {
            stack((stack).size - 2) = a - b
          } else {
            if (ch == "*") {
              stack((stack).size - 2) = a * b
            } else {
              if (ch == "/") {
                stack((stack).size - 2) = a / b
              } else {
                println(ch + " invalid.")
                valid = false
                break
              }
            }
          }
        }
        stack = stack.slice(0, (stack).size - 1)
      }
      i = i + 1
    }
    if (valid) {
      if (abs(stack(0) - 24.0) > 0.000001) {
        println("incorrect. " + String.valueOf(stack(0)) + " != 24")
      } else {
        println("correct.")
      }
    }
  }
  
  def main(args: Array[String]): Unit = {
    main()
  }
}
